--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Home — Your Name</title>
+  <title>Home — Nishant Chauhan</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <script defer src="assets/partials.js"></script>
   <script defer src="assets/script.js"></script>
@@ -14,36 +14,43 @@
 <header class="hero">
   <div class="container">
     <div>
-      <span class="badge">Shells • Oceans • Carbon — personal site template</span>
-      <h1>Your Name</h1>
-      <p>Short intro: what you study/build, and what you’re looking for. Keep it crisp and human.</p>
-      <p><a class="tag" href="cv.html">View CV</a> <a class="tag" href="papers.html">Papers</a> <a class="tag" href="projects.html">Projects</a></p>
+      <span class="badge"> Oceans • Climate Change • Policy </span>
+      <h1>Nishant Chauhan</h1>
+      <p>I am fascinated by the complexity of life, even on a nanometer scale. 
+        As a Postdoctoral Research Associate at the University of Cambridge, 
+        I study the mechanisms involved in the formation of shells in marine 
+        organisms such as Coccolithophores (single-celled plankton) and reef-
+        forming corals.</p>
+      <p><a class="tag" href="cv.html">View CV</a> <a class="tag" href="papers.html">Papers</a> <a class="tag" href="projects.html">Blog</a></p>
     </div>
     <div class="card">
       <h2>Latest News</h2>
       <ul>
-        <li><strong>Aug 2025</strong> — Launched this website template.</li>
-        <li><strong>Jun 2025</strong> — Preprint released on bioRxiv: <em>Title here</em>.</li>
+        <li><strong>May 2025</strong> - I attended my last (and first) graduation ceremony.</li>
+        <li><strong>June 2024</strong> - Started my Postdoc at Cambridge!</li>
+        <li><strong>May 2024</strong> - PhD submitted!</li>
       </ul>
-      <p class="muted">Edit this in <code>index.html</code>.</p>
+      <p class="muted">Read my blog for more!</p>
     </div>
   </div>
 </header>
 
 <main class="container">
   <section class="section">
-    <h2>Featured Projects</h2>
-    <p class="muted">A quick overview. Put the rest on the Projects page.</p>
+    <h2>Featured Posts</h2>
+    <p class="muted">A quick look at my latest blog posts.</p>
     <div class="grid cards">
       <article class="card">
-        <h3>Project A</h3>
-        <p>One-sentence explanation and your role.</p>
-        <a href="projects.html">See more →</a>
+        <h3>Marine Carbon Dioxide Removal (CDR)</h3>
+        <p>Scientists are finding ways to capture and
+         store anthropogenic carbon emissions. Can we 
+        store it in the ocean?</p>
+        <a href="blog.html">See more →</a>
       </article>
       <article class="card">
-        <h3>Project B</h3>
-        <p>One-sentence explanation and your role.</p>
-        <a href="projects.html">See more →</a>
+        <h3>The role of phytoplankton in the Carbon Cycle</h3>
+        <p>Phytoplankton are at the drivers of key oceanic processes. Are they Earth's unsung heroes?</p>
+        <a href="blog.html">See more →</a>
       </article>
     </div>
   </section>
