--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact — Your Name</title>
+  <title>Contact — Nishant Chauhan</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <script defer src="assets/partials.js"></script>
   <script defer src="assets/script.js"></script>
@@ -14,9 +14,10 @@
 <main class="container section">
   <h1>Contact</h1>
   <div class="card">
-    <p>Email: <a href="mailto:your.name@example.com">your.name@example.com</a></p>
-    <p>Twitter/X: <a href="#">@yourhandle</a></p>
-    <p>GitHub: <a href="#">github.com/yourname</a></p>
+    <p>Email: <a href="mailto:nc667@cam.ac.uk">nc667@cam.ac.uk</a></p>
+    <p>LinkedIn: <a href="www.linkedin.com/in/chauhan-n">LinkedIn</a></p>
+    <p>GitHub: <a href="#">github.com/chauhan-n</a></p>
+    <p>Address: <a href="https://maps.app.goo.gl/y88Q4hjRcUWp4j3V6">Cambridge, UK</a></p>
   </div>
 </main>
 
