--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CV — Your Name</title>
+  <title>CV — Nishant Chauhan</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <script defer src="assets/partials.js"></script>
   <script defer src="assets/script.js"></script>
@@ -14,7 +14,6 @@
   
 <main class="container section cv">
   <h1>Curriculum Vitae</h1>
-  <p class="muted">Edit <code>data/cv.json</code> (no build tools needed). The page renders from that file automatically.</p>
   <div id="cv" class="grid"></div>
 </main>
 
