--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Projects — Your Name</title>
+  <title>Blog - Nishant Chauhan</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <script defer src="assets/partials.js"></script>
   <script defer src="assets/script.js"></script>
@@ -12,20 +12,14 @@
   <div id="nav"></div>
   
 <main class="container section">
-  <h1>Projects</h1>
-  <p class="muted">Highlight a handful with short blurbs, links, and tags.</p>
+  <h1>Blog</h1>
+  <p class="muted">I will try to balance my work and life. Opinions are my own. </p>
   <div class="grid cards">
     <article class="card">
-      <h3>Project One</h3>
-      <p>What it is, why it matters, what you did.</p>
-      <p><span class="tag">JS</span> <span class="tag">Data</span></p>
-      <p><a href="#">Code</a> · <a href="#">Demo</a></p>
-    </article>
-    <article class="card">
-      <h3>Project Two</h3>
-      <p>What it is, why it matters, what you did.</p>
-      <p><span class="tag">Python</span> <span class="tag">Visualization</span></p>
-      <p><a href="#">Paper</a> · <a href="#">Docs</a></p>
+      <h3>Personal Recommendations!</h3>
+      <p>My recommendations on music/books/podcasts and so much more!</p>
+      <p><span class="tag">Personal</span></p>
+      <p><a href="#">Read more →</a> · <a href="#">Demo</a></p>
     </article>
   </div>
 </main>
