--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
     <div>
       <span class="badge"> Oceans • Climate Change • Policy </span>
       <h1>Nishant Chauhan</h1>
-      <p>I am fascinated by the complexity of life, even on a nanometer scale. 
-        As a Postdoctoral Research Associate at the University of Cambridge, 
-        I study the mechanisms involved in the formation of shells in marine 
-        organisms such as Coccolithophores (single-celled plankton) and reef-
-        forming corals.</p>
+      <p>I am driven by a single goal: turning scientific insight into climate solutions.
+         My background spans the study of Earth system processes, 
+        from phytoplankton-scale interactions to the global carbon cycle. 
+        I focus on understanding climate impacts on 
+        marine ecosystems and identifying actionable strategies for mitigation. 
+        I am now looking to apply this expertise in 
+        policy and industry to deliver tangible, science-based outcomes for a sustainable future.</p>
       <p><a class="tag" href="cv.html">View CV</a> <a class="tag" href="papers.html">Papers</a> <a class="tag" href="projects.html">Blog</a></p>
     </div>
     <div class="card">
       <h2>Latest News</h2>
       <ul>
-        <li><strong>May 2025</strong> - I attended my last (and first) graduation ceremony.</li>
-        <li><strong>June 2024</strong> - Started my Postdoc at Cambridge!</li>
-        <li><strong>May 2024</strong> - PhD submitted!</li>
+        <li><strong>May 2025</strong> - Attend PhD graduation ceremony - check! </li>
+        <li><strong>June 2024</strong> - Start Postdoc at Cambridge - check!</li>
+        <li><strong>May 2024</strong> - Submit PhD - check!</li>
       </ul>
-      <p class="muted">Read my blog for more!</p>
+      <p class="muted"><a href="blog.html">Read my blog for more!</a></p>
     </div>
   </div>
 </header>
@@ -48,7 +50,7 @@
         <a href="blog.html">See more →</a>
       </article>
       <article class="card">
-        <h3>The role of phytoplankton in the Carbon Cycle</h3>
+        <h3>The Role of Phytoplankton in the Carbon Cycle</h3>
         <p>Phytoplankton are at the drivers of key oceanic processes. Are they Earth's unsung heroes?</p>
         <a href="blog.html">See more →</a>
       </article>
