--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CV — Nishant Chauhan</title>
+  <title>CV - Nishant Chauhan</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <script defer src="assets/partials.js"></script>
   <script defer src="assets/script.js"></script>
