--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         marine ecosystems and identifying actionable strategies for mitigation. 
         I am now looking to apply this expertise in 
         policy and industry to deliver tangible, science-based outcomes for a sustainable future.</p>
-      <p><a class="tag" href="cv.html">View CV</a> <a class="tag" href="papers.html">Papers</a> <a class="tag" href="projects.html">Blog</a></p>
+      <p><a class="tag" href="cv.html">View CV</a> <a class="tag" href="publications.html">Publications</a> <a class="tag" href="blog.html">Blog</a></p>
     </div>
     <div class="card">
       <h2>Latest News</h2>
