--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <h1>Contact</h1>
   <div class="card">
     <p>Email: <a href="mailto:nc667@cam.ac.uk">nc667@cam.ac.uk</a></p>
-    <p>LinkedIn: <a href="www.linkedin.com/in/chauhan-n">chauhan-n</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/chauhan-n">chauhan-n</a></p>
     <p>GitHub: <a href="https://github.com/chauhan-n">github.com/chauhan-n</a></p>
     <p>Address: <a href="https://maps.app.goo.gl/y88Q4hjRcUWp4j3V6">Cambridge, UK</a></p>
   </div>
