--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
       <h3>Personal Recommendations!</h3>
       <p>My recommendations on music/books/podcasts and so much more!</p>
       <p><span class="tag">Personal</span></p>
-      <p><a href="#">Read more →</a> · <a href="#">Demo</a></p>
+      <p><a href="blog-post.html?id=personal-recommendations">Read more →</a> 
     </article>
   </div>
 </main>
