--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <header class="hero">
   <div class="container">
     <div>
-      <span class="badge"> Oceans • Climate Change • Policy </span>
+    
       <img class="profile-pic" src="assets/images/profile_pic.jpg" alt="My Profile Photo">
+      
       <h1>Nishant Chauhan</h1>
+        <span class="badge"> Oceans • Climate • Policy </span>
       <p>I am driven by a single goal: turning scientific insight into climate solutions.
          My background spans the study of Earth system processes, 
         from phytoplankton-scale interactions to the global carbon cycle. 
