--- a/cv.html
+++ b/cv.html
@@ -8,15 +8,34 @@
   <script defer src="assets/partials.js"></script>
   <script defer src="assets/script.js"></script>
   <script defer src="assets/cv.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
+
 </head>
 <body>
   <div id="nav"></div>
-  
-<main class="container section cv">
+
+<main class="container section cv" id="cv-container">
   <h1>Curriculum Vitae</h1>
   <div id="cv" class="grid"></div>
 </main>
 
+  <button id="download-pdf">Download CV as PDF</button>
+
   <div id="footer"></div>
+ 
+  <script>
+document.getElementById("download-pdf").addEventListener("click", () => {
+    const element = document.getElementById('cv-container'); // only your CV section
+    const options = {
+        margin: 10,
+        filename: 'Nishant_Chauhan_CV.pdf',
+        image: { type: 'jpeg', quality: 0.98 },
+        html2canvas: { scale: 2 },
+        jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+    };
+    html2pdf().set(options).from(element).save();
+});
+</script>
+  
 </body>
 </html>
