--- a/cv.html
+++ b/cv.html
@@ -15,11 +15,12 @@
   <div id="nav"></div>
 
 <main class="container section cv" id="cv-container">
+ <div class="cv-header">
   <h1>Curriculum Vitae</h1>
+  <button id="download-pdf">Download CV as PDF</button>
+  </div>
   <div id="cv" class="grid"></div>
 </main>
-
-  <button id="download-pdf">Download CV as PDF</button>
 
   <div id="footer"></div>
  
