--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li><strong>June 2024</strong> - Start Postdoc at Cambridge - check!</li>
         <li><strong>May 2024</strong> - Submit PhD - check!</li>
       </ul>
-      <p class="muted"><a href="blog.html">Read my blog for more!</a></p>
+      <p class="muted"><a href="blog.html">More</a></p>
     </div>
   </div>
 </header>
@@ -46,10 +46,9 @@
     <p class="muted">A quick look at my latest blog posts.</p>
     <div class="grid cards">
       <article class="card">
-        <h3>Marine Carbon Dioxide Removal (CDR)</h3>
+        <h3>State of Carbon Dioxide Removal (CDR) in the UK</h3>
         <p>Scientists are finding ways to capture and
-         store anthropogenic carbon emissions. Can we 
-        store it in the ocean?</p>
+         store anthropogenic carbon emissions. How is it going? </p>
         <a href="blog.html">See more →</a>
       </article>
       <article class="card">
