--- a/cv.html
+++ b/cv.html
@@ -33,8 +33,8 @@ document.getElementById("download-pdf").addEventListener("click", () => {
     const originalColor = element.style.color;
 
     // Apply PDF-friendly styles
-    element.style.backgroundColor = "white";
-    element.style.color = "black";
+    element.style.backgroundColor = #ccc;
+    element.style.color = "white";
 
     const options = {
         margin: 10,
