--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,7 @@ document.getElementById("download-pdf").addEventListener("click", () => {
     const originalColor = element.style.color;
 
     // Apply PDF-friendly styles
-    element.style.backgroundColor = #ccc;
+    element.style.backgroundColor = "dimgray";
     element.style.color = "white";
 
     const options = {
