--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
     <p class="muted">A quick look at my latest blog posts.</p>
     <div class="grid cards">
       <article class="card">
-        <h3>State of Carbon Dioxide Removal (CDR) in the UK</h3>
-        <p>Scientists are finding ways to capture and
-         store anthropogenic carbon emissions. How is it going? </p>
-        <a href="blog.html">See more →</a>
+        <h3>UK Net Zero 2025: Progress, Pitfalls, and What’s Next</h3>
+        <p> UK was the first country to commit to Net Zero. Are we still on track? </p>
+        <a href="blog-post.html?id=net-zero-2025">See more →</a>
       </article>
       <article class="card">
         <h3>The Role of Phytoplankton in the Carbon Cycle</h3>
