--- a/blog-post.html
+++ b/blog-post.html
@@ -16,6 +16,7 @@
       <h1>Loading...</h1>
       <p>Please wait...</p>
     </article>
+    <div id="blog-content" class="blog-content"></div>
   </main>
   
   <div id="footer"></div>
