--- a/blog-post.html
+++ b/blog-post.html
@@ -12,7 +12,7 @@
   <div id="nav"></div>
   
   <main class="container section">
-    <article id="blog-content">
+    <article id="blog-content" class="blog-content">
       <h1>Loading...</h1>
       <p>Please wait...</p>
     </article>
