--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,12 @@
       <p><span class="tag">UK Government</span></p>
       <p><a href="blog-post.html?id=net-zero-2025">Read more →</a> 
     </article>
+      <article class="card">
+      <h3>What is the UK’s progress in preparing for climate change?</h3>
+      <p>We might be on the way to Net Zero, but are we prepared for cliamte change?</p>
+      <p><span class="tag">UK Government</span></p>
+      <p><a href="blog-post.html?id=climate-adaptation-2025">Read more →</a> 
+    </article>
   </div>
 </main>
 
