--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <a href="blog-post.html?id=net-zero-2025">See more →</a>
       </article>
       <article class="card">
-        <h3>The Role of Phytoplankton in the Carbon Cycle</h3>
-        <p>Phytoplankton are at the drivers of key oceanic processes. Are they Earth's unsung heroes?</p>
-        <a href="blog.html">See more →</a>
+        <h3>What is the UK’s progress in preparing for climate change?</h3>
+        <p>We might be on the way to Net Zero, but are we prepared for cliamte change?</p>
+        <a href="blog-post.html?id=climate-adaptation-2025">See more →</a>
       </article>
     </div>
   </section>
