--- a/blog.html
+++ b/blog.html
@@ -15,9 +15,15 @@
   <h1>Blog</h1>
   <p class="muted">I will try to balance my work and life. Opinions are my own. </p>
   <div class="grid cards">
+       <article class="card">
+      <h3>Latest News</h3>
+      <p>Latest personal and professional news </p>
+      <p><span class="tag">Personal</span></p>
+      <p><a href="blog-post.html?id=latest-news">Read more →</a> 
+    </article>
     <article class="card">
       <h3>Personal Recommendations!</h3>
-      <p>My recommendations on music/books/podcasts and so much more!</p>
+      <p>My latest recommendations on music/books/podcasts.</p>
       <p><span class="tag">Personal</span></p>
       <p><a href="blog-post.html?id=personal-recommendations">Read more →</a> 
     </article>
