--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
        <article class="card">
       <h3>Latest News</h3>
       <p>Latest personal and professional news </p>
-      <p><span class="tag">Personal</span></p>
+      <p><span class="tag">Personal</span></p> <p><span class="tag">Professional</span></p>
       <p><a href="blog-post.html?id=latest-news">Read more →</a> 
     </article>
     <article class="card">
