--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,12 @@
       <p><span class="tag">UK Government</span></p>
       <p><a href="blog-post.html?id=climate-adaptation-2025">Read more →</a> 
     </article>
+     <article class="card">
+      <h3>A Rough Guide to Carbon Markets</h3>
+      <p>Let's try to understand the basics of carbon markets together - what it is, and what it does.</p>
+      <p><span class="tag">Carbon</span></p>
+      <p><a href="blog-post.html?id=carbon-markets-2025">Read more →</a> 
+    </article>
   </div>
 </main>
 
