--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,12 @@
       <p><a href="blog-post.html?id=personal-recommendations">Read more →</a> 
     </article>
     <article class="card">
+      <h3>Are Battery Energy Storage Systems the Solution to an Unstable Renewable Electrical Grid? </h3>
+      <p>Renewable energy is not produced on demand, but can we store it for later?</p>
+      <p><span class="tag">UK Government</span></p>
+      <p><a href="blog-post.html?id=bess-2025">Read more →</a> 
+    </article>
+    <article class="card">
       <h3>UK Net Zero 2025: Progress, Pitfalls, and What’s Next</h3>
       <p>UK was the first country to commit to Net Zero. Are we still on track?</p>
       <p><span class="tag">UK Government</span></p>
