--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="card">
       <h2>Latest News</h2>
       <ul>
-         <li><strong>Oct 2025</strong> -Visited Hastings to see Graham Nash perform live! </li>
-        <li><strong>Sep 2025</strong> - Attended the Advances in Coccolithophore Research meeting 2025 </li>
-        <li><strong>Sep 2025</strong> - I did my first solo moto-camping trip around Devon and Cornwall </li>
+         <li><strong>Dec 2025</strong> -Attended the Royal Society Meeting (London) on Marine Biodiversity, Loss and Climate Change </li>
+        <li><strong>Dec 2025</strong> - Attended the Reef Conservation UK meeting in Bangor, Wales </li>
+        <li><strong>Dec 2025</strong> -Watched a Musical called <q> Book of Mormons</q></li>
       </ul>
       <p class="muted"><a href="blog-post.html?id=latest-news">More</a></p>
     </div>
