Update latest news entry in index.html

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <div class="card">
       <h2>Latest News</h2>
       <ul>
-         <li><strong>Dec 2025</strong> -Attended the Royal Society Meeting (London) on Marine Biodiversity, Loss and Climate Change </li>
+        <li><strong>Feb 2025</strong> Completed RNA extractions for my second decoupled carbonate chemistry experiment on Coccolithophores! Whatch this space for Science updates!</li>
+        <li><strong>Dec 2025</strong> -Attended the Royal Society Meeting (London) on Marine Biodiversity, Loss and Climate Change </li>
         <li><strong>Dec 2025</strong> - Attended the Reef Conservation UK meeting in Bangor, Wales </li>
-        <li><strong>Dec 2025</strong> -Watched a Musical called <q> Book of Mormons</q></li>
+      
       </ul>
       <p class="muted"><a href="blog-post.html?id=latest-news">More</a></p>
     </div>
